# src/main/resources/openapi/finance-manager-specification.yaml
@@ -3,10 +3,10 @@ info:
   title: OpenAPI definition
   version: v0
 servers:
-- url: http://localhost:58808
+- url: http://localhost:54794
   description: Generated server url
 paths:
-  /api/expenses:
+  /api/v1/expenses:
     get:
       tags:
       - expense-controller
@@ -57,7 +57,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ResponseEnvelope"
-  /api/budgets:
+  /api/v1/budgets:
     get:
       tags:
       - budget-controller
@@ -102,7 +102,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ResponseEnvelope"
-  /api/budgets/{id}:
+  /api/v1/budgets/{id}:
     get:
       tags:
       - budget-controller
@@ -187,7 +187,7 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
-  /api/expenses/{id}:
+  /api/v1/expenses/{id}:
     get:
       tags:
       - expense-controller
@@ -465,6 +465,20 @@ components:
     ErrorResponse:
       type: object
       properties:
+        body:
+          $ref: "#/components/schemas/ProblemDetail"
+        statusCode:
+          $ref: "#/components/schemas/HttpStatusCode"
+        typeMessageCode:
+          type: string
+        detailMessageArguments:
+          type: array
+          items:
+            type: object
+        detailMessageCode:
+          type: string
+        titleMessageCode:
+          type: string
         headers:
           type: object
           properties:
@@ -537,38 +551,27 @@ components:
               type: array
               items:
                 type: string
-            ifModifiedSince:
-              type: integer
-              format: int64
-            contentType:
-              $ref: "#/components/schemas/MediaType"
-            acceptLanguage:
-              type: array
-              items:
-                type: object
-                properties:
-                  range:
-                    type: string
-                  weight:
-                    type: number
-                    format: double
-            basicAuth:
+            origin:
               type: string
-              writeOnly: true
-            acceptPatch:
+            acceptCharset:
               type: array
               items:
-                $ref: "#/components/schemas/MediaType"
-            accept:
-              type: array
-              items:
-                $ref: "#/components/schemas/MediaType"
-            expires:
-              type: integer
-              format: int64
-            bearerAuth:
+                type: string
+            cacheControl:
               type: string
-              writeOnly: true
+            contentDisposition:
+              $ref: "#/components/schemas/ContentDisposition"
+            range:
+              type: array
+              items:
+                $ref: "#/components/schemas/HttpRange"
+            allow:
+              uniqueItems: true
+              type: array
+              items:
+                $ref: "#/components/schemas/HttpMethod"
+            etag:
+              type: string
             contentLanguage:
               type: object
               properties:
@@ -609,45 +612,51 @@ components:
                   type: string
                 iso3Country:
                   type: string
-            acceptCharset:
+            acceptLanguage:
               type: array
               items:
-                type: string
-            allow:
-              uniqueItems: true
-              type: array
-              items:
-                $ref: "#/components/schemas/HttpMethod"
-            etag:
+                type: object
+                properties:
+                  range:
+                    type: string
+                  weight:
+                    type: number
+                    format: double
+            basicAuth:
               type: string
+              writeOnly: true
+            accept:
+              type: array
+              items:
+                $ref: "#/components/schemas/MediaType"
+            acceptPatch:
+              type: array
+              items:
+                $ref: "#/components/schemas/MediaType"
+            expires:
+              type: integer
+              format: int64
             ifMatch:
               type: array
               items:
                 type: string
-            upgrade:
-              type: string
             ifNoneMatch:
               type: array
               items:
                 type: string
+            bearerAuth:
+              type: string
+              writeOnly: true
+            pragma:
+              type: string
+            upgrade:
+              type: string
             vary:
               type: array
               items:
                 type: string
-            pragma:
-              type: string
-            origin:
-              type: string
-            range:
-              type: array
-              items:
-                $ref: "#/components/schemas/HttpRange"
-            contentDisposition:
-              $ref: "#/components/schemas/ContentDisposition"
-            cacheControl:
-              type: string
-            accessControlRequestMethod:
-              $ref: "#/components/schemas/HttpMethod"
+            accessControlAllowCredentials:
+              type: boolean
             acceptLanguageAsLocales:
               type: array
               items:
@@ -690,14 +699,20 @@ components:
                     type: string
                   iso3Country:
                     type: string
-            accessControlAllowCredentials:
-              type: boolean
-            accessControlAllowOrigin:
-              type: string
+            accessControlAllowHeaders:
+              type: array
+              items:
+                type: string
             accessControlAllowMethods:
               type: array
               items:
                 $ref: "#/components/schemas/HttpMethod"
+            accessControlRequestHeaders:
+              type: array
+              items:
+                type: string
+            accessControlRequestMethod:
+              $ref: "#/components/schemas/HttpMethod"
             accessControlExposeHeaders:
               type: array
               items:
@@ -705,35 +720,20 @@ components:
             accessControlMaxAge:
               type: integer
               format: int64
-            accessControlAllowHeaders:
-              type: array
-              items:
-                type: string
             ifUnmodifiedSince:
               type: integer
               format: int64
-            accessControlRequestHeaders:
-              type: array
-              items:
-                type: string
+            accessControlAllowOrigin:
+              type: string
+            ifModifiedSince:
+              type: integer
+              format: int64
+            contentType:
+              $ref: "#/components/schemas/MediaType"
           additionalProperties:
             type: array
             items:
               type: string
-        statusCode:
-          $ref: "#/components/schemas/HttpStatusCode"
-        body:
-          $ref: "#/components/schemas/ProblemDetail"
-        detailMessageArguments:
-          type: array
-          items:
-            type: object
-        detailMessageCode:
-          type: string
-        titleMessageCode:
-          type: string
-        typeMessageCode:
-          type: string
     HttpMethod:
       type: object
     HttpRange:
@@ -743,15 +743,15 @@ components:
       properties:
         error:
           type: boolean
-        is4xxClientError:
-          type: boolean
         is5xxServerError:
+          type: boolean
+        is4xxClientError:
           type: boolean
         is2xxSuccessful:
           type: boolean
-        is1xxInformational:
-          type: boolean
         is3xxRedirection:
+          type: boolean
+        is1xxInformational:
           type: boolean
     MediaType:
       type: object
@@ -771,12 +771,12 @@ components:
           type: string
         concrete:
           type: boolean
-        wildcardSubtype:
-          type: boolean
-        wildcardType:
-          type: boolean
         subtypeSuffix:
           type: string
+        wildcardType:
+          type: boolean
+        wildcardSubtype:
+          type: boolean
     ProblemDetail:
       type: object
       properties:
